feat:운영정책,감사로그 #49